# ColumnarDataframe

./: conanfile.py  main.cpp  meson.build
include/: bytebuffer.h  column.h  meson.build
source/: bytebuffer.cpp  column.cpp  meson.build
tests/: bytebuffer_test.cpp  column_test.cpp  meson.build
